--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/reverb": "^1.7",
         "laravel/sanctum": "^4.0",
         "laravel/socialite": "^5.24",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "minishlink/web-push": "^10.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
